RESOLVED FIXED98064
ScrollView::setScrollPosition is overridden by FrameView, but is not virtual
https://bugs.webkit.org/show_bug.cgi?id=98064
Summary ScrollView::setScrollPosition is overridden by FrameView, but is not virtual
Tim Horton
Reported 2012-10-01 13:54:26 PDT
This results in some functions (scrollBy) using ScrollView's implementation, and others (scrollTo) using FrameView's, and leads to a lot of confusion/brokenness.
Attachments
patch (2.39 KB, patch)
2012-10-01 13:58 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2012-10-01 13:58:48 PDT
Tim Horton
Comment 2 2012-10-01 23:20:53 PDT
Darin Adler
Comment 3 2012-10-02 09:20:58 PDT
Comment on attachment 166536 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=166536&action=review > Source/WebCore/platform/ScrollView.h:187 > + virtual void setScrollPosition(const IntPoint&); I recommend using the OVERRIDE macro in cases like this.
Tim Horton
Comment 4 2012-10-02 09:46:17 PDT
(In reply to comment #3) > (From update of attachment 166536 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=166536&action=review > > > Source/WebCore/platform/ScrollView.h:187 > > + virtual void setScrollPosition(const IntPoint&); > > I recommend using the OVERRIDE macro in cases like this. Hi, Darin! I did, on FrameView (the overriding subclass). I don't think it belongs on ScrollView since ScrollView is originating setScrollPosition, right?
Note You need to log in before you can comment on or make changes to this bug.