ScrollView::setScrollPosition is overridden by FrameView, but is not virtual https://bugs.webkit.org/show_bug.cgi?id=98064

Reviewed by Simon Fraser.

Virtualize ScrollView::setScrollPosition, and override it in FrameView.

No new tests, this causes subtle behavior differences in currently-untestable code.

* page/FrameView.h:
(FrameView):
* platform/ScrollView.h:
(ScrollView):


Canonical link: https://commits.webkit.org/116123@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@130123 268f45cc-cd09-0410-ab3c-d52691b4dbfc